--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+# DATABASE
 server.port = 8088
 spring.datasource.url:jdbc:mysql://localhost:3306/exam3?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
 spring.datasource.driverClassName:com.mysql.cj.jdbc.Driver
 spring.datasource.username:root
 spring.datasource.password:
 
+#JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
